# osa_gui

./: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  package.xml  trs_gui.pro
include/common/: Actuator.hpp  Battery.hpp  BatteryMonitor.hpp  Camera.hpp  CommunicationLayer.hpp  Computer.hpp  Controller.hpp  Encoder.hpp  Gearbox.hpp  Hardware.hpp  MasterBoard.hpp  Motor.hpp  Project.hpp  Robot.hpp  Sensor.hpp  SerialCommunication.hpp  SlaveBoard.hpp  USBDevice.hpp  actuator.h  battery.h  battery_monitor.h  camera.h  communication_layer.h  computer.h  controller.h  encoder.h  gearbox.h  hardware.h  motor.h  project.h  robot.h  sensor.h  serial_communication.h  usb_device.h
include/common/osa_msgs_json/: JSONMotorCmd.hpp  JSONMotorCmdMultiArray.hpp  JSONMotorData.hpp  JSONMotorDataMultiArray.hpp  json_motor_cmd.h  json_motor_cmd_multi_array.h  json_motor_data.h  json_motor_data_multi_array.h
include/gui/: BasicControlGUI.hpp  BasicControlGUI_controller.hpp  ConfigurationGUI.hpp  MainWindow.hpp  PlotGUI.hpp  SequencerGUI.hpp  SupervisorGUI.hpp  basic_control_gui.h  basic_control_gui_controller.h  configuration_gui.h  main_window.h  plot_gui.h  sequencer_gui.h  supervisor_gui.h
include/rosnode/: BasicControlNode.hpp  FaceTrackingNode.hpp  PlotNode.hpp  SequencerNode.hpp  basic_control_node.h  face_tracking_node.h  plot_node.h  sequencer_node.h
include/sequencer/: Condition.hpp  MotionStyle.hpp  Pause.hpp  Posture.hpp  Sequence.hpp  SequenceElement.hpp  SequencerThread.hpp  condition.h  motion_style.h  pause.h  posture.h  sequence.h  sequence_element.h  sequencer_thread.h
launch/: ROS_GUI.launch  osa_gui.launch  ros_gui.launch
mbed/BiBot/SlaveBoard/: input_arm.cfg  input_base.cfg
resources/: images.qrc
save/: OSA1.osa  OSA2.osa  OSA3.osa
scripts/: rxgraph.sh
src/: main.cpp
src/common/: Actuator.cpp  Battery.cpp  BatteryMonitor.cpp  Camera.cpp  CommunicationLayer.cpp  Computer.cpp  Controller.cpp  Encoder.cpp  Gearbox.cpp  Hardware.cpp  MasterBoard.cpp  Motor.cpp  Project.cpp  Robot.cpp  Sensor.cpp  SerialCommunication.cpp  SlaveBoard.cpp  USBDevice.cpp  actuator.cpp  battery.cpp  battery_monitor.cpp  camera.cpp  communication_layer.cpp  computer.cpp  controller.cpp  encoder.cpp  gearbox.cpp  hardware.cpp  motor.cpp  project.cpp  robot.cpp  sensor.cpp  serial_communication.cpp  usb_device.cpp
src/common/osa_msgs_json/: JSONMotorCmd.cpp  JSONMotorCmdMultiArray.cpp  JSONMotorData.cpp  JSONMotorDataMultiArray.cpp  (+4 more)
src/gui/: BasicControlGUI.cpp  BasicControlGUI_controller.cpp  ConfigurationGUI.cpp  MainWindow.cpp  PlotGUI.cpp  SequencerGUI.cpp  SupervisorGUI.cpp  basic_control_gui.cpp  basic_control_gui_controller.cpp  configuration_gui.cpp  main_window.cpp  plot_gui.cpp  sequencer_gui.cpp  supervisor_gui.cpp
src/rosnode/: BasicControlNode.cpp  FaceTrackingNode.cpp  PlotNode.cpp  SequencerNode.cpp  basic_control_node.cpp  face_tracking_node.cpp  plot_node.cpp  sequencer_node.cpp
src/sequencer/: Condition.cpp  MotionStyle.cpp  Pause.cpp  Posture.cpp  Sequence.cpp  SequenceElement.cpp  SequencerThread.cpp  condition.cpp  motion_style.cpp  pause.cpp  posture.cpp  sequence.cpp  sequence_element.cpp  sequencer_thread.cpp
ui/: BasicControlGUI.ui  BasicControlGUIController.ui  BasicControlGUI_controller.ui  ConfigurationGUI.ui  ConfigurationGUIWizard.ui  MainWindow.ui  PlotGUI.ui  SequencerGUI.ui  SupervisorGUI.ui
xml/dtd/: robot.dtd
(+13 files in other folders)
