<?xml version="1.0"?>
<package>
  <name>osa_gui</name>
  <version>0.0.1</version>
  <description>TRS Robot GUI</description>
  <license>BSD</license>
  <maintainer email="cyril.jourdan@therobotstudio.com">Cyril Jourdan</maintainer>
  <author email="cyril.jourdan@therobotstudio.com">Cyril Jourdan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>osa_msgs</build_depend>
  <build_depend>osa_control</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>osa_msgs</run_depend>
  <run_depend>osa_control</run_depend>
</package>
