<?xml version="1.0"?>
<package>
  <name>osa_gui</name>
  <version>0.1.0</version>
  <description>Package for the GUI</description>
  <license>Simplified BSD</license>
  
  <maintainer email="cyril.jourdan@therobotstudio.com">Cyril Jourdan</maintainer>
  <author email="cyril.jourdan@therobotstudio.com">Cyril Jourdan</author>
  
  <url type="GitHub repository">https://github.com/TheRobotStudio</url>
  <url type="OSA website">http://opensourceandroid.org/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>osa_msgs</build_depend>
  <build_depend>osa_control</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>osa_msgs</run_depend>
  <run_depend>osa_control</run_depend>
</package>
